--- a/index.html
+++ b/index.html
@@ -28,23 +28,15 @@
         </div>
         <div class="product-info">
 
-          <!-- '{{  }}' inside double curly braces, we can run javascript expressions inside the html -->
-          <h1>{{ product }}</h1>
+          <h1>{{ brand + ' ' + product }}</h1>
+
+          <!-- use computed property -->
+          <h1>{{ title }}</h1>
 
           <!-- 'v-if' directive renders if the condition is true -->
-          <p v-if="inStock">In Stock</p>
           <!-- if the condition is not true, renders 'v-else' -->
+          <p v-if="inStock">In Stock</p>
           <p v-else>Out of Stock</p>
-
-          <!-- Similarly -->
-          <p v-if="inventory > 10">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-          <p v-else>Out of Stock</p>
-
-          <!-- 'v-show' is used for toggling element's visibility -->
-          <!-- if the value is true, it renders the element. -->
-          <!-- if the value is false, the element would be hidden. -->
-          <p v-show="inStock">In Stock</p>
 
           <ul>
             <!-- 'v-for' works like a 'for loop' -->
@@ -52,55 +44,12 @@
             <!-- 'detail' is the alias for the elements inside the array -->
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
-          <!-- ':' denotes 'v-bind:' -->
-          <!-- 'key' gives each DOM element a unique key to track the element -->
-          <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
-
-          <!-- change the color when hover over -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}
-          </div>
-
-          <!-- add css binding -->
-          <!-- 'backgroundColor' is camelCased property name -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
-            class="color-circle" :style="{ backgroundColor: variant.color }"></div>
 
           <!-- 'background-color' is kebab-cased property name, put inside quotes -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
+          <!-- here we update image and inStock state using computed properties -->
+          <!-- use index is second parameter and pass it in -->
+          <div v-for="(variant, index) in variants" :key="variant.id" @mouseover="updateVariant(index)"
             class="color-circle" :style="{ 'background-color': variant.color }"></div>
-
-
-          <!-- class binding -->
-          <!-- multiple classes -->
-          <!-- when the 'activeClass' is true, the 'active' class will be added to the class -->
-          <!-- the class changed to 'color-circle active' -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
-            class="color-circle" :style="{ 'background-color': variant.color }"
-            :class="{ active: activeClass }"></div>
-
-          <!-- class binding -->
-          <!-- or we can use Ternary Operators -->
-          <!-- if 'isActive' is true, here we add the 'activeClass' -->
-          <!-- or, here we add the bland '' -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
-            class="color-circle" :style="{ 'background-color': variant.color }"
-            :class="[ isActive ? activeClass : '' ]"></div>
-
-          <!-- or, sometimes if we put too much inline css, it would get messy -->
-          <!-- so we can add all inline css inside an object within data() -->
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
-            class="color-circle" :style="styles">{{ variant.color }}</div>
-
-          <!-- 'v-on:' is a directive used as event listener to listen to DOM events -->
-          <!-- 'click' here is the event we are listening to -->
-          <!-- 'cart += 1' is the expression we are running when the event is triggered -->
-          <button class="button" v-on:click="cart += 1">Add to Cart</button>
-
-          <!-- 'v-on:' can be shorthanded with '@' -->
-          <button class="button" @click="cart += 1">Add to Cart</button>
-
-          <!-- add a method name here -->
-          <button class="button" @click="addToCart">Add to Cart</button>
 
           <!-- disable the button if it is out of stock -->
           <button class="button" :class="{ disabledButton: !inStock }" @click="addToCart" :disabled="!inStock">
